# llm-from-scratch

./: .gitignore  README.md  compare_cpu_gpu.py  gpt.py  gpt_download.py  instruct_sft.py  layer_norm.py  main.py  prepare_spam_dataset.py  pyproject.toml  self_attention.py  spam_sft.py  tokenizer.py  torch_example.py  train.py  use_pretrained.py
data/sms_spam_collection/: .gitignore
